@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="var" path="CASTOR/commons-logging.jar"/>
-	<classpathentry kind="lib" path="lib/libdbus-java-1.10.jar"/>
-	<classpathentry kind="var" path="CASTOR/log4j-1.2.8.jar"/>
-	<classpathentry kind="src" path="user-level-src"/>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="dnssd-src"/>
-	<classpathentry kind="src" path="generated-src"/>
-	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="lib" path="lib/jakarta-oro-2.0.8.jar"/>
-	<classpathentry kind="var" path="CASTOR/xerces-J_1.4.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/jmdns.jar"/>
-	<classpathentry kind="var" path="CASTOR/castor-1.0.1-xml.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry path="user-level-src" kind="src"/>
+	<classpathentry path="src" kind="src"/>
+	<classpathentry path="dnssd-src" kind="src"/>
+	<classpathentry path="generated-src" kind="src"/>
+	<classpathentry path="test" kind="src"/>
+	<classpathentry path="lib/xerces.jar" kind="lib"/>
+	<classpathentry path="lib/commons-logging-1.1.jar" kind="lib"/>
+	<classpathentry path="lib/jakarta-oro-2.0.8.jar" kind="lib"/>
+	<classpathentry path="lib/castor-1.0.1-xml.jar" kind="lib"/>
+	<classpathentry path="org.eclipse.jdt.launching.JRE_CONTAINER" kind="con"/>
+	<classpathentry path="lib/jmdns.jar" kind="lib"/>
+	<classpathentry path="lib/dbus-2.1.jar" kind="lib"/>
+	<classpathentry path="lib/dbus-bin-2.1.jar" kind="lib"/>
+	<classpathentry path="lib/debug-disable-1.1.jar" kind="lib"/>
+	<classpathentry path="lib/hexdump-0.1.jar" kind="lib"/>
+	<classpathentry path="lib/libdbus-java-2.1.jar" kind="lib"/>
+	<classpathentry path="lib/unix-0.2.jar" kind="lib"/>
+	<classpathentry path="bin" kind="output"/>
 </classpath>
