@@ -1,5 +1,5 @@
 
-dnssdFactory = mdns
+dnssdFactory = avahi
 sharedFactory = true
 
 dnssdFactory.comment = aliases should not contain dot characters
@@ -15,7 +15,7 @@ dnssdFactory.client = fr.prima.omiscid.dnssd.client.DNSSDFactoryOmiscid
 dnssdFactory.4 = fr.prima.omiscid.dnssd.avahi.DNSSDFactoryAvahi
 dnssdFactory.avahi = fr.prima.omiscid.dnssd.avahi.DNSSDFactoryAvahi
 dnssdFactory.4.comment = not 100% operationnal, when using avahi, the running user must be kind of allowed to access the avahi dbus. It seems to happen by being in a specific user group (plugdev?) or not (don't know really what is the cause)
-dnssdFactory.0 = fr.prima.omiscid.dnssd..SmartToBeImpl  
+dnssdFactory.0 = fr.prima.omiscid.dnssd..SmartToBeImpl
 dnssdFactory.smart = fr.prima.omiscid.dnssd..SmartToBeImpl  
 
 sharedFactory.key = sharedFactory
