@@ -5,18 +5,24 @@
 In this files, you will find changes between java OMiSCID versions.
 
 1.0.4
-/////r1806
+/////r1806 not released
         fix:  default "class" variable value is now "Service" as intended
         fix:  getting a remote variable now properly ask the remote service (wrong caching policy)
         fix:  service xml description now uses proper castor version
+        fix:  added a try catch around listener callbacks (was trusting listeners) (connector and variable listeners)
+        fix:  listener added before connectTo are now properly listening
 +dnssd server refresh (allow declaration)
 +dnssd fix among implementation (coherence in full name ...)
-+dnssd avahi refresh : !!! still not 100% ok (wait for a stable dbus release and java dbus release and/or pure java dbus)
++dnssd avahi refresh: !!! still not 100% ok (wait for a stable dbus release and java dbus release and/or pure java dbus)
++dnssd avahi refresh: using dbusjava 2 that is 100% pure java except libunix.so
 +uses derefencing in cfg.properties to choose dnssd impl
 +added a test !! the first one !!! and some more
 +dnssd server for production use
 +dnssd server fix when on different machines :-) using ip address for now
-
+*must: solve the castor proliferation problem
+*should: avahi usage using dbus using java-dbus 2.0 (pure java + native unix socket library)
+*could: dnssd client auto connect/reconnect
+*could: dnssd client has a list of expected servers
 
 1.0.3
 r1700
